--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,56 +7,26 @@ on:
     branches: [ "master" ]
 
 jobs:
-  golangci:
-    name: lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
-        with:
-          go-version: '1.20'
-          cache: false
-      - name: golangci-lint
-        env:
-          GITHUB_TOKEN: ${{ secrets.DEPLOYMENT_GITHUB_TOKEN }}
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: latest
-          # Optional: golangci-lint command line arguments.
-          #
-          # Note: By default, the `.golangci.yml` file should be at the root of the repository.
-          # The location of the configuration file can be changed by using `--config=`
-          # args: --timeout=30m --config=/my/path/.golangci.yml --issues-exit-code=0 
-          only-new-issues: true
-          install-mode: "goinstall"
-
-      - name: Create GitHub issues for linting errors
-        uses: actions/github-script@v5
-        with:
-          script: |
-            const issues = ${{ toJson(steps.golangci.outputs.issues) }}
-            const octokit = require('@octokit/rest')();
-            octokit.authenticate({
-              type: 'token',
-              token: process.env.GITHUB_TOKEN,
-            });
-
-            for (const issue of issues) {
-              octokit.issues.create({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                title: `Linting Issue: ${issue.linter}`,
-                body: `File: ${issue.file}\nLine: ${issue.line}\nMessage: ${issue.text}\n`,
-              });
-            }
-
+  
   build: 
-  
-  
-
     runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+        - name: Build the Docker image
+          run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+         # Manual approval step
+        - name: Manual approval
+            if: github.event_name == 'workflow_dispatch'
+              run: |
+                echo "Manually approve the merge to staging"
+          # Add any other instructions or prompts for the approver
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      # Wait for manual approval
+        - name: Wait for approval
+            if: github.event_name == 'workflow_dispatch'
+              continue-on-error: true
+            run: |
+             echo "Waiting for manual approval..."
+              sleep 10s
+          # Add a loop here to check if the pull request has been approved
+          # You can use GitHub API or any other mechanism to check for approval
