--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,22 +1,21 @@
 name: Docker Image CI
-
 on:
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-
+    
+workflow_dispatch:
 jobs:
-  
   build: 
     runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v3
-        - name: Build the Docker image
-          run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    steps:
+      - name: Build the Docker image
+        uses: actions/checkout@v3
+        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
          # Manual approval step
-        - name: Manual approval
-            if: github.event_name == 'workflow_dispatch'
+      - name: Manual approval
+        if: github.event_name == 'workflow_dispatch'
               run: |
                 echo "Manually approve the merge to staging"
           # Add any other instructions or prompts for the approver
