--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
     inputs:
       releaseType:
-        description: "Merge to Staging yes/no? "
+        description: 'Merge to Staging (build or merge-to-staging )?'
         required: true
         default: 'build'
 
