--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,16 +8,18 @@ jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
   deploy-dev:
     runs-on: 'ubuntu-latest'
     environment: 'Developement'
     needs: build-and-publish
-    steps:
 
   deploy-prod:
     runs-on: 'ubuntu-latest'
     environment: 'Production'
     needs: [build-and-publish, deploy-dev]
-    steps:
+
+      
 
