--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,81 +1,75 @@
-name: 'Deploy ASP.NET Core app to Azure Web App'
+name: CI/CD
 
 on:
   push:
     branches:
-      - "main"
+      - master
 
-env:
-  DOTNET_VERSION: '3.1.404'
-
+# Define a custom event for manual approval
+workflow_dispatch:
 
 jobs:
+  tag-parsing:
+    runs-on: ubuntu-latest
+    name: Parse tag and branch for docker
+    outputs:
+      image_registry: ${{ steps.output_values.outputs.image_registry }}
+      update_tag: ${{ steps.output_values.outputs.update_tag }}
+      should_publish: ${{ steps.output_values.outputs.should_publish }}
+      should_deploy: ${{ steps.output_values.outputs.should_deploy }}
+      deployment_environment: ${{ steps.output_values.outputs.deployment_environment }}
+    steps:
+      # Add your tag-parsing steps here
+
   build-and-publish:
     runs-on: ubuntu-latest
+    name: Publish to artifact registry
+    if: ${{ needs.tag-parsing.outputs.should_publish }} == "true"
+    needs:
+      - tag-parsing
     steps:
+      # Add your build and publish steps here
 
-      # Checkout the repo
-      - uses: actions/checkout@master
+  call-dispatch-event:
+    runs-on: ubuntu-latest
+    name: Call dispatch event
+    needs:
+      - tag-parsing
+      - build-and-publish
+    steps:
+      # Add your call-dispatch-event steps here
 
-      # Setup .NET Core SDK
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}
+  staging-approval:
+    runs-on: ubuntu-latest
+    needs:
+      - tag-parsing
+      - build-and-publish
+      - call-dispatch-event
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      # Run dotnet build and publish
-      - name: dotnet build and publish
-        working-directory: 'app'
+      - name: Ask for staging deployment approval
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         run: |
-          dotnet restore
-          dotnet build --configuration Release
-          dotnet publish -c Release -o './published-app'          
+          echo "Do you want to deploy to staging environment? (YES/NO)"
+          read -r confirmation
 
-      # Publish artifact
-      - name: Publish artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: published-app
-          path: './app/published-app'
+          if [[ $confirmation == "YES" ]]; then
+            echo "Staging deployment is approved."
+            echo "Proceeding with the deployment..."
+            echo "approved=YES" >> $GITHUB_ENV
+          else
+            echo "Staging deployment is not approved."
+            echo "Skipping the staging deployment..."
+            echo "approved=NO" >> $GITHUB_ENV
+          fi
 
-  deploy-dev:
-    runs-on: 'ubuntu-latest'
-    environment: 'dev'
-    needs: build-and-publish
-    steps:
-
-      # Download published artifact
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: published-app
-          path: './published-app'
-
-      # Deploy to web app
-      - name: Deploy to Azure WebApp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: app-cloudlumberjack-dev
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: './published-app'
-
-  deploy-prod:
-    runs-on: 'ubuntu-latest'
-    environment: 'prod'
-    needs: [build-and-publish, deploy-dev]
-    steps:
-
-      # Download published artifact
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: published-app
-          path: './published-app'
-
-      # Deploy to web app
-      - name: Deploy to Azure WebApp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: app-cloudlumberjack-prod
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: './published-app'
+      - name: Merge master into staging
+        if: ${{ env.approved == 'YES' }}
+        run: |
+          # Assuming your staging branch is named 'staging'
+          git checkout staging
+          git merge master
+          # Optionally, you can push the changes to the remote staging branch here
+          git push origin staging
